<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000">

    <Button
        android:id="@+id/tabata_setTiempo"
        android:layout_width="105dp"
        android:layout_height="54dp"
        android:layout_marginStart="292dp"
        android:layout_marginTop="488dp"
        android:backgroundTint="@android:color/holo_blue_light"
        android:text="SET"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/button_stop_play_tabata"
        android:layout_width="190dp"
        android:layout_height="52dp"
        android:layout_marginStart="108dp"
        android:layout_marginTop="592dp"
        android:backgroundTint="@android:color/holo_blue_light"
        android:text="@string/button_stop_play_amrap"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_tabata_rest"
        android:layout_width="121dp"
        android:layout_height="40dp"
        android:layout_marginStart="140dp"
        android:layout_marginTop="540dp"
        android:backgroundTint="#F6F5F5"
        android:ems="10"
        android:inputType="number"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/et_tabata_rounds"
        android:layout_width="115dp"
        android:layout_height="42dp"
        android:layout_marginStart="140dp"
        android:layout_marginTop="452dp"
        android:backgroundTint="#F6F5F5"
        android:ems="10"
        android:inputType="number"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/et_tabata_work"
        android:layout_width="119dp"
        android:layout_height="40dp"
        android:layout_marginStart="140dp"
        android:layout_marginTop="496dp"
        android:backgroundTint="#F6F5F5"
        android:ems="10"
        android:inputType="number"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <ProgressBar
        android:id="@+id/progressBar_tabata"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="270dp"
        android:layout_height="270dp"
        android:layout_centerInParent="true"
        android:layout_marginStart="68dp"
        android:layout_marginTop="168dp"
        android:background="@drawable/circulo_2_amrap"
        android:indeterminate="false"
        android:max="100"

        android:progress="100"
        android:progressDrawable="@drawable/circulo_1_trabata"
        android:rotation="-90"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/teview_tiempo_tabata"
        android:layout_width="154dp"
        android:layout_height="78dp"
        android:layout_marginStart="128dp"
        android:layout_marginTop="244dp"
        android:text="00:00"
        android:textAlignment="center"
        android:textColor="@android:color/holo_blue_light"
        android:textSize="60sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textview_p_tabata"
        android:layout_width="177dp"
        android:layout_height="71dp"
        android:layout_marginStart="116dp"
        android:layout_marginTop="52dp"
        android:fontFamily="serif"
        android:text="@string/b4_p_principal"
        android:textAlignment="center"
        android:textColor="@android:color/holo_blue_light"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_rondas"
        android:layout_width="91dp"
        android:layout_height="34dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="460dp"
        android:text="@string/rondas"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tview_work"
        android:layout_width="91dp"
        android:layout_height="34dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="496dp"
        android:text="@string/trabajo"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/teview_rest"
        android:layout_width="111dp"
        android:layout_height="35dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="536dp"
        android:text="@string/descanso"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/amrap_contRondas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="292dp"
        android:layout_marginTop="148dp"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>