<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000">

    <ImageButton
        android:id="@+id/emom_restart"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginStart="340dp"
        android:layout_marginTop="644dp"
        android:backgroundTint="#EDCD2F"
        android:src="@drawable/ic_restart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <Button
        android:id="@+id/button_stop_play_emom"
        android:layout_width="190dp"
        android:layout_height="52dp"
        android:layout_marginStart="124dp"
        android:layout_marginTop="640dp"
        android:backgroundTint="#EDCD2F"
        android:text="@string/button_stop_play_amrap"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar_amrap2"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="270dp"
        android:layout_height="270dp"
        android:layout_centerInParent="true"
        android:layout_marginStart="68dp"
        android:layout_marginTop="172dp"
        android:background="@drawable/circulo_2_emom"

        android:indeterminate="false"
        android:max="100"
        android:progress="100"
        android:progressDrawable="@drawable/circulo_1_emom"
        android:rotation="-90"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tiempo_emom"
        android:layout_width="154dp"

        android:layout_height="78dp"
        android:layout_marginStart="124dp"
        android:layout_marginTop="248dp"
        android:text="00:00"
        android:textAlignment="center"
        android:textColor="#EDCD2F"
        android:textSize="60sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textview_p_emom"
        android:layout_width="177dp"
        android:layout_height="71dp"
        android:layout_marginStart="116dp"
        android:layout_marginTop="60dp"
        android:fontFamily="serif"
        android:text="@string/b3_p_principal"
        android:textAlignment="center"
        android:textColor="#EDCD2F"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/teView_emom_sets"
        android:layout_width="115dp"
        android:layout_height="32dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="472dp"
        android:text="@string/rondas"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_emom"
        android:layout_width="132dp"
        android:layout_height="48dp"
        android:layout_marginStart="152dp"
        android:layout_marginTop="472dp"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:inputType="number"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/b_set_emom"
        android:layout_width="64dp"
        android:layout_height="36dp"
        android:layout_marginStart="292dp"
        android:layout_marginTop="488dp"
        android:backgroundTint="#EDCD2F"
        android:text="SET"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/contador_rondas"
        android:layout_width="52dp"
        android:layout_height="45dp"
        android:layout_marginStart="320dp"
        android:layout_marginTop="128dp"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>